--- a/categories.html
+++ b/categories.html
@@ -45,25 +45,25 @@
         <h2>Shop by Categories</h2>
         <div class="category-container">
             <div class="category-item">
-                <img src="/category photo/WhatsApp Image 2024-09-11 at 12.00.30 AM.jpeg" alt="Category 1">
+                <img src="category photo/WhatsApp Image 2024-09-11 at 12.00.30 AM.jpeg" alt="Category 1">
                 <h3>Category 1</h3>
                 <p>Explore a wide range of products in this category.</p>
                 <a href="category1.html" class="btn">Shop Now</a>
             </div>
             <div class="category-item">
-                <img src="/category photo/WhatsApp Image 2024-09-11 at 12.00.31 AM.jpeg" alt="Category 2">
+                <img src="category photo/WhatsApp Image 2024-09-11 at 12.00.31 AM.jpeg" alt="Category 2">
                 <h3>Category 2</h3>
                 <p>Find the best deals and top products here.</p>
                 <a href="category2.html" class="btn">Shop Now</a>
             </div>
             <div class="category-item">
-                <img src="/category photo/WhatsApp Image 2024-09-11 at 12.00.32 AM (1).jpeg" alt="Category 3">
+                <img src="category photo/WhatsApp Image 2024-09-11 at 12.00.32 AM (1).jpeg" alt="Category 3">
                 <h3>Category 3</h3>
                 <p>Discover exclusive items and new arrivals.</p>
                 <a href="category3.html" class="btn">Shop Now</a>
             </div>
             <div class="category-item">
-                <img src="/category photo/WhatsApp Image 2024-09-11 at 12.00.32 AM.jpeg" alt="Category 4">
+                <img src="category photo/WhatsApp Image 2024-09-11 at 12.00.32 AM.jpeg" alt="Category 4">
                 <h3>Category 4</h3>
                 <p>Browse our curated selection for this category.</p>
                 <a href="category4.html" class="btn">Shop Now</a>
