--- a/community.html
+++ b/community.html
@@ -347,7 +347,7 @@
 
     <main class=".community-container">
         <div class="community-photo">
-        <img src="/Community/diverse-people-circle-community-concept-43888196.webp" alt=""></div>
+        <img src="Community/diverse-people-circle-community-concept-43888196.webp" alt=""></div>
         <div class="community-header">
             <h1>Welcome to Our Community</h1>
             <p>Join discussions, attend events, and connect with like-minded individuals.</p>
@@ -363,7 +363,7 @@
             <div class="testimonial-container">
               <div class="testimonial-item">
                
-                <img src="/Customer/blue-circle-with-white-user_78370-4707.avif" alt="Customer 3" class="customer-photo" />
+                <img src="Customer/blue-circle-with-white-user_78370-4707.avif" alt="Customer 3" class="customer-photo" />
                 <blockquote>
                   <footer>-User</footer>
                   <div class="add-post-container">
@@ -381,7 +381,7 @@
             </div>
             <div class="testimonial-container">
               <div class="testimonial-item">
-                <img src="/Customer/default-avatar-profile-icon-vector-social-media-user-image-182145777.webp" alt="Customer 3" class="customer-photo" />
+                <img src="Customer/default-avatar-profile-icon-vector-social-media-user-image-182145777.webp" alt="Customer 3" class="customer-photo" />
                 <blockquote>
                   <p>"Great service and amazing selection of products."</p>
                   <footer>- mohammed Ali</footer>
@@ -393,7 +393,7 @@
             </div>
             <div class="testimonial-container">
               <div class="testimonial-item">
-                <img src="/Customer/default-avatar-profile-icon-vector-social-media-user-image-182145777.webp" alt="Customer 3" class="customer-photo" />
+                <img src="Customer/default-avatar-profile-icon-vector-social-media-user-image-182145777.webp" alt="Customer 3" class="customer-photo" />
                 <blockquote>
                   <p>"Great service and amazing selection of products."</p>
                   <footer>- mohammed Ali</footer>
@@ -405,7 +405,7 @@
             </div>
             <div class="testimonial-container">
               <div class="testimonial-item">
-                <img src="/Customer/default-avatar-profile-icon-vector-social-media-user-image-182145777.webp" alt="Customer 3" class="customer-photo" />
+                <img src="Customer/default-avatar-profile-icon-vector-social-media-user-image-182145777.webp" alt="Customer 3" class="customer-photo" />
                 <blockquote>
                   <p>"Great service and amazing selection of products."</p>
                   <footer>- mohammed Ali</footer>
@@ -424,7 +424,7 @@
         <section class="section-forums-section">
             <h2>Medical consultation</h2>
             <div>
-                <img src="/Community/The Role of Pharmacists in Healthcare Systems.jpg" alt="">
+                <img src="Community/The Role of Pharmacists in Healthcare Systems.jpg" alt="">
             </div>
             <div class="forums-container">
                 <div class="forum-item">
@@ -476,7 +476,7 @@
             <h2>Member Testimonials</h2>
             <div class="testimonials-container">
                 <div class="testimonial-item">
-                    <img src="/Customer/default-avatar-profile-icon-vector-social-media-user-image-182145777.webp" alt="Member 1">
+                    <img src="Customer/default-avatar-profile-icon-vector-social-media-user-image-182145777.webp" alt="Member 1">
                     <blockquote>
                         <p>"Being part of this community has been an amazing experience. The support and knowledge shared are invaluable."</p>
                         <footer>
@@ -485,7 +485,7 @@
                     </blockquote>
                 </div>
                 <div class="testimonial-item">
-                    <img src="/Customer/default-avatar-profile-icon-vector-social-media-user-image-182145777.webp" alt="Member 2">
+                    <img src="Customer/default-avatar-profile-icon-vector-social-media-user-image-182145777.webp" alt="Member 2">
                     <blockquote>
                         <p>"I’ve learned so much from the forums and events. The community is truly supportive and engaging."</p>
                         <footer>
@@ -494,7 +494,7 @@
                     </blockquote>
                 </div>
                 <div class="testimonial-item">
-                    <img src="/Customer/default-avatar-profile-icon-vector-social-media-user-image-182145777.webp" alt="Member 3">
+                    <img src="Customer/default-avatar-profile-icon-vector-social-media-user-image-182145777.webp" alt="Member 3">
                     <blockquote>
                         <p>"The networking opportunities here are fantastic. I've connected with like-minded professionals and grown my network."</p>
                         <footer>
@@ -515,17 +515,17 @@
                 <h2>Featured Members & mentor</h2>
                 <div class="featured-members-container">
                     <div class="member-item">
-                        <img src="/Customer/360_F_110408571_MKABH1lRABlrn4aK6gUsWhFv9gTdSMOe.jpg" alt="Member 1">
+                        <img src="Customer/360_F_110408571_MKABH1lRABlrn4aK6gUsWhFv9gTdSMOe.jpg" alt="Member 1">
                         <h3>Alex Brown</h3>
                         <p>General Practitioner</p>
                     </div>
                     <div class="member-item">
-                        <img src="/Customer/995586_746594.jpg" alt="Member 2">
+                        <img src="Customer/995586_746594.jpg" alt="Member 2">
                         <h3>John Smith</h3>
                         <p>Cardiologist</p>
                     </div>
                     <div class="member-item">
-                        <img src="/Customer/1.webp" alt="Member 3">
+                        <img src="Customer/1.webp" alt="Member 3">
                         <h3>Sarah Lee</h3>
                         <p>Plastic Surgeon</p>
                     </div>
@@ -539,13 +539,13 @@
                 <h2>Sponsored Ads</h2>
                 <div class="ads-container">
                     <div class="ad-item">
-                        <a href="#"><img src="/shops pharmacy icon/tiny-pharmacist-with-medicine-drug-pill-vitamin-and-bottle-online-pharmacy-or-drugstore-with-antibiotic-people-healthcare-vector-concept-2H6A3MC.jpg" alt="Ad 1"></a>
+                        <a href="#"><img src="shops pharmacy icon/tiny-pharmacist-with-medicine-drug-pill-vitamin-and-bottle-online-pharmacy-or-drugstore-with-antibiotic-people-healthcare-vector-concept-2H6A3MC.jpg" alt="Ad 1"></a>
                     </div>
                     <div class="ad-item">
-                        <a href="#"><img src="/shops pharmacy icon/male-pharmacist-guarding-the-pharmacy-free-vector.jpg" alt="Ad 2"></a>
+                        <a href="#"><img src="shops pharmacy icon/male-pharmacist-guarding-the-pharmacy-free-vector.jpg" alt="Ad 2"></a>
                     </div>
                     <div class="ad-item">
-                            <a href="#"><img src="/shops pharmacy icon/pharmacist-counter-pharmacy-vector-illustration-people-buying-medicine-store-doctor-patient-flat-style-175115127.webp" alt="Ad 3"></a>
+                            <a href="#"><img src="shops pharmacy icon/pharmacist-counter-pharmacy-vector-illustration-people-buying-medicine-store-doctor-patient-flat-style-175115127.webp" alt="Ad 3"></a>
                     </div>
                 </div>
                 </section>
