--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <section class="logo-photo-section">
         <div>
-          <img src="/Screenshot 2024-09-12 220629.png" alt="Interlinked logo" />
+          <img src="Screenshot 2024-09-12 220629.png" alt="Interlinked logo" />
         </div>
       </section>
 
@@ -70,7 +70,7 @@
         <h2>Medical Categories</h2>
         <div class="product-container home">
           <div class="product-item shops home">
-            <img src="/Medical Categories/Medicines.jfif" alt="Medicines" />
+            <img src="edical Categories/Medicines.jfif" alt="Medicines" />
             <div class="product-info">
               <h3>Medicines</h3>
               <p class="description">
@@ -81,7 +81,7 @@
           </div>
 
           <div class="product-item shops home">
-            <img src="/Medical Categories/Vitamins.jpeg" alt="Vitamins" />
+            <img src="Medical Categories/Vitamins.jpeg" alt="Vitamins" />
             <div class="product-info">
               <h3>Vitamins</h3>
               <p class="description">
@@ -92,7 +92,7 @@
           </div>
 
           <div class="product-item shops home">
-            <img src="/Medical Categories/Beauty & Care Essentials.jpg" alt="Beauty & Care Essentials" />
+            <img src="Medical Categories/Beauty & Care Essentials.jpg" alt="Beauty & Care Essentials" />
             <div class="product-info">
               <h3>Beauty & Care Essentials</h3>
               <p class="description">
@@ -103,7 +103,7 @@
           </div>
 
           <div class="product-item shops home">
-            <img src="/Medical Categories/Medical-Supply-or-Equipment.jpg" alt="Medical Instruments" />
+            <img src="Medical Categories/Medical-Supply-or-Equipment.jpg" alt="Medical Instruments" />
             <div class="product-info">
               <h3>Medical Instruments</h3>
               <p class="description">
@@ -152,7 +152,7 @@
           <h2>What Our Customers Say</h2>
           <div class="testimonial-container">
             <div class="testimonial-item">
-              <img src="/Customer/close-up-young-person-barbeque_23-2149271990.avif" alt="Customer 1" class="customer-photo" />
+              <img src="Customer/close-up-young-person-barbeque_23-2149271990.avif" alt="Customer 1" class="customer-photo" />
               <blockquote>
                 <p>"Interlinked has completely transformed the way I shop online."</p>
                 <footer>- Jane Doe</footer>
@@ -160,7 +160,7 @@
             </div>
         
             <div class="testimonial-item">
-              <img src="/Customer/pleased-smiling-man-with-beard-looking-camera_176420-18040.avif" alt="Customer 2" class="customer-photo" />
+              <img src="Customer/pleased-smiling-man-with-beard-looking-camera_176420-18040.avif" alt="Customer 2" class="customer-photo" />
               <blockquote>
                 <p>"I love how easy it is to find exactly what I need."</p>
                 <footer>- John Smith</footer>
@@ -168,7 +168,7 @@
             </div>
         
             <div class="testimonial-item">
-              <img src="/Customer/portrait-man-laughing_23-2148859448.avif" alt="Customer 3" class="customer-photo" />
+              <img src="Customer/portrait-man-laughing_23-2148859448.avif" alt="Customer 3" class="customer-photo" />
               <blockquote>
                 <p>"Great service and amazing selection of products."</p>
                 <footer>- mohammed Ali</footer>
