--- a/shops.html
+++ b/shops.html
@@ -53,7 +53,7 @@
             <h2>Shops</h2>
             <div class="shops-container">
                 <div class="shop-item">
-                    <img src="/shops pharmacy icon/isolated-front-view-pharmacy-building-vector-2HRY9RG.jpg" alt="Shop 1" width="250px">
+                    <img src="shops pharmacy icon/isolated-front-view-pharmacy-building-vector-2HRY9RG.jpg" alt="Shop 1" width="250px">
                     <div class="shop-info">
                         <h3>Shop 1</h3>
                         <p class="description">Brief description of Shop 1.</p>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="shop-item">
-                    <img src="/shops pharmacy icon/depositphotos_112849992-stock-illustration-pharmacy-shop-vector-illustration.jpg" alt="Shop 2" width="250px">
+                    <img src="shops pharmacy icon/depositphotos_112849992-stock-illustration-pharmacy-shop-vector-illustration.jpg" alt="Shop 2" width="250px">
                     <div class="shop-info">
                         <h3>Shop 2</h3>
                         <p class="description">Brief description of Shop 2.</p>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="shop-item">
-                    <img src="/shops pharmacy icon/images.jfif" alt="Shop 3">
+                    <img src="shops pharmacy icon/images.jfif" alt="Shop 3">
                     <div class="shop-info">
                         <h3>Shop 3</h3>
                         <p class="description">Brief description of Shop 3.</p>
@@ -86,28 +86,28 @@
             <h2>Featured Medical Products</h2>
             <div class="product-grid">
                 <div class="product-item shops">
-                    <img src="/shops pharmacy icon/360_F_277662326_ZqZbOmOnKqKTFXEkASXoYz2cSRGC6TTV.jpg" alt="Antibiotics">
+                    <img src="shops pharmacy icon/360_F_277662326_ZqZbOmOnKqKTFXEkASXoYz2cSRGC6TTV.jpg" alt="Antibiotics">
                     <h3>Antibiotics</h3>
                     <p>Effective antibiotics for bacterial infections.</p>
                     <p class="price">$19.99</p>
                     <a href="#" class="btn">View Details</a>
                 </div>
                 <div class="product-item shops">
-                    <img src="/shops pharmacy icon/istockphoto-1385204292-612x612.jpg" alt="Vitamins">
+                    <img src="shops pharmacy icon/istockphoto-1385204292-612x612.jpg" alt="Vitamins">
                     <h3>Vitamin Supplements</h3>
                     <p>Boost your immune system with essential vitamins.</p>
                     <p class="price">$29.99</p>
                     <a href="#" class="btn">View Details</a>
                 </div>
                 <div class="product-item shops">
-                    <img src="/shops pharmacy icon/male-pharmacist-guarding-the-pharmacy-free-vector.jpg" alt="Blood Pressure Monitor">
+                    <img src="shops pharmacy icon/male-pharmacist-guarding-the-pharmacy-free-vector.jpg" alt="Blood Pressure Monitor">
                     <h3>Blood Pressure Monitor</h3>
                     <p>Track your blood pressure with ease at home.</p>
                     <p class="price">$49.99</p>
                     <a href="#" class="btn">View Details</a>
                 </div>
                 <div class="product-item shops">
-                    <img src="/shops pharmacy icon/medical-pharmacy-illustration-concept-white-background_701961-8193.avif" alt="Hand Sanitizer">
+                    <img src="shops pharmacy icon/medical-pharmacy-illustration-concept-white-background_701961-8193.avif" alt="Hand Sanitizer">
                     <h3>Hand Sanitizer</h3>
                     <p>Stay safe with hospital-grade hand sanitizer.</p>
                     <p class="price">$5.99</p>
@@ -117,7 +117,7 @@
         </section>
     
          <div class="Order-item" ">
-            <img src="/shops pharmacy icon/Big-Data-Analytics-in-Pharmaceutical-Industry.jpg" alt="photo of inventory">
+            <img src="shops pharmacy icon/Big-Data-Analytics-in-Pharmaceutical-Industry.jpg" alt="photo of inventory">
             <div>
                 <i class="fas fa-cogs"></i>
                 <h3>Inventory Management</h3>
