--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2>Medical Categories</h2>
         <div class="product-container home">
           <div class="product-item shops home">
-            <img src="edical Categories/Medicines.jfif" alt="Medicines" />
+            <img src="Medical Categories/Medicines.jfif" alt="Medicines" />
             <div class="product-info">
               <h3>Medicines</h3>
               <p class="description">
