--- a/index.html
+++ b/index.html
@@ -247,15 +247,17 @@
         </div>
       </footer>
     </div>
-      <div id="searchPage">
-        <fieldset class="search-container">
-          <input type="text" placeholder="Search" />
-          <div class="main-button">
-            <div class="first-button"></div>
-            <div class="second-button"></div>
-          </div>
-        </fieldset>
+    <div id="searchPage">
+      <fieldset class="search-container">
+        <input type="text" placeholder="Search" />
+        <div class="main-button">
+          <div class="first-button"></div>
+          <div class="second-button"></div>
+        </div>
+      </fieldset>
+      <div class="phone-search-container">
       </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
