--- a/shops.html
+++ b/shops.html
@@ -159,12 +159,14 @@
 
     <div id="searchPage">
         <fieldset class="search-container">
-            <input type="text" placeholder="Search">
-            <div class="main-button">
-                <div class="first-button"></div>
-                <div class="second-button"></div>
-            </div>
+          <input type="text" placeholder="Search" />
+          <div class="main-button">
+            <div class="first-button"></div>
+            <div class="second-button"></div>
+          </div>
         </fieldset>
+        <div class="phone-search-container">
+        </div>
     </div>
 
 
