--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <p>Connecting customers, stores, and suppliers seamlessly.</p>
         </div>
         <div class="new-search-container">
-          <input type="text" placeholder="find your product type..." />
+          <input type="text" placeholder="Find your product type..." />
           <button class="btn">Search</button>
         </div>
       </section>
@@ -142,7 +142,7 @@
             <i class="fas fa-robot"></i>
             <h3>AI-Powered Product Insights</h3>
             <p>Discover products effortlessly with our AI-powered tool. It uses advanced algorithms to provide smart insights and personalized suggestions,
-               helping you find exactly what you need!</p>
+              helping you find exactly what you need!</p>
             <button class="cancel-btn">&times;</button>
           </div>
       </section>
@@ -224,7 +224,8 @@
               <h3>Contact Us</h3>
               <ul>
                 <li><i class="fas fa-map-marker-alt"></i> 123 Main Street, City, Country</li>
-                <li><i class="fas fa-phone"></i> +1 234 567 890</li>
+                <li><i class="fas fa-phone"></i> +02 01013528764 - +02 01021727857
+                </li>
                 <li><i class="fas fa-envelope"></i> <a href="mailto:info@interlinked.com">info@interlinked.com</a></li>
               </ul>
             </div>
@@ -243,7 +244,7 @@
         </div>
       
         <div class="footer-bottom">
-          <p>&copy; 2024 Interlinked. All rights reserved. Designed by YourCompany.</p>
+          <p>&copy; 2024 Interlinked. All rights reserved. Designed by Hussein Ashraf & Mohamed Ayad</p>
         </div>
       </footer>
     </div>
