--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2>Medical Categories</h2>
         <div class="product-container home">
           <div class="product-item shops home">
-            <img src="/Medical Categories/Medicines.jfif" alt="Medicines" />
+            <img src="Medical Categories/Medicines.jfif" alt="Medicines" />
             <div class="product-info">
               <h3>Medicines</h3>
               <p class="description">
@@ -81,7 +81,7 @@
           </div>
 
           <div class="product-item shops home">
-            <img src="/Medical Categories/Vitamins.jpeg" alt="Vitamins" />
+            <img src="Medical Categories/Vitamins.jpeg" alt="Vitamins" />
             <div class="product-info">
               <h3>Vitamins</h3>
               <p class="description">
@@ -92,7 +92,7 @@
           </div>
 
           <div class="product-item shops home">
-            <img src="/Medical Categories/Beauty & Care Essentials.jpg" alt="Beauty & Care Essentials" />
+            <img src="Medical Categories/Beauty & Care Essentials.jpg" alt="Beauty & Care Essentials" />
             <div class="product-info">
               <h3>Beauty & Care Essentials</h3>
               <p class="description">
@@ -103,7 +103,7 @@
           </div>
 
           <div class="product-item shops home">
-            <img src="/Medical Categories/Medical-Supply-or-Equipment.jpg" alt="Medical Instruments" />
+            <img src="Medical Categories/Medical-Supply-or-Equipment.jpg" alt="Medical Instruments" />
             <div class="product-info">
               <h3>Medical Instruments</h3>
               <p class="description">
