--- a/community.html
+++ b/community.html
@@ -76,6 +76,7 @@
             border: 1px solid #ddd;
             padding: 1rem;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            background-color: white;
         }
 
         .forum-item {
@@ -84,6 +85,7 @@
             border: 1px solid #ddd;
             padding: 1rem;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            background-color: white;
         }
 
         .testimonial-item {
