--- a/community.html
+++ b/community.html
@@ -17,6 +17,7 @@
             border: 1px solid #ddd;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             padding: 30px;
+            padding-top: 200px;
         }
 
         .community-header {
