--- a/community.html
+++ b/community.html
@@ -348,7 +348,7 @@
     
     
 
-    <main class=".community-container">
+    <main class="community-container">
         <div class="community-photo">
         <img src="Community/diverse-people-circle-community-concept-43888196.webp" alt=""></div>
         <div class="community-header">
