--- a/community.html
+++ b/community.html
@@ -27,7 +27,7 @@
 
         .community-header h1 {
             font-size: 2.5rem;
-            color: #333;
+            color: deepskyblue;
         }
 
         .community-header p {
@@ -305,6 +305,11 @@
         .see-more-posts-btn {
             font-size: 0.9rem;
             padding: 0.5rem 1rem;
+        }
+        @media (max-width: 768px) {
+            .community-container {
+                padding-top: 100px;
+            }
         }
     }
     </style>
