--- a/community.html
+++ b/community.html
@@ -23,6 +23,7 @@
         .community-header {
             text-align: center;
             margin-bottom: 2rem;
+            padding: 16px;
         }
 
         .community-header h1 {
